Created recipes folder, image folder and lasagna

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,8 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-
-    <h1>Odin Recipes</h1>
+    <h1>Lasagna Recipe</h1>
     
+    <ol>
+        <li></li>
+    </ol>
 </body>
 </html>
