updated recipe list

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -1,16 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <h1>Lasagna Recipe</h1>
-    
+
     <ol>
-        <li></li>
+        <li>2 teaspoons of olive oil</li>
+        <li>1 pound of ground beef</li>
+        <li>1/2 medium onion, diced</li>
+        <li>1/2 large bell pepper</li>
+        <li>2 clove of garlic</li>
+        <li>1 can good-quality tomato sauce</li>
+        <li>3 ounces tomato paste</li>
+        <li>1 can crushed tomatoes</li>
+        <li>2 tablespoons chopped fresh oregano</li>
+        <li>1/4 cup chopped fresh parsley</li>
+        <li>1 tablespoon italian seasoning</li>
+        <li>1 pinch gralic powder</li>
+        <li>1 tablespoon red or white wine vinegar</li>
+        <li>1 tablespoon of sugar</li>
+        <li>salt</li>
     </ol>
 </body>
+
 </html>
