--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
     <h1>Odin Recipes</h1>
 
-    <ol>
-        <li><a href="recipes/lasagna.html"></a></li>
-    </ol>
+    <ul>
+        <li><a href="recipes/lasagna.html">Lasagna Recipe</a></li>
+    </ul>
 </body>
 
 </html>
