--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -10,8 +10,9 @@
 
 <body>
     <h1>Lasagna Recipe</h1>
-
-    <ol>
+    <img src="images/MainPicture_Lasagna.jpeg" alt="Finished Lasagna Recipe">
+    <h2>Ingredients List</h2>
+    <ul>
         <li>2 teaspoons of olive oil</li>
         <li>1 pound of ground beef</li>
         <li>1/2 medium onion, diced</li>
@@ -27,7 +28,99 @@
         <li>1 tablespoon red or white wine vinegar</li>
         <li>1 tablespoon of sugar</li>
         <li>salt</li>
+    </ul>
+
+    <h2>To Assemble the lasagna</h2>
+    <ol>
+        <li>1/2 pound dry lasagna noodles (requires 9 lasagna noodles - unbroken)</li>
+        <li>15 ounces ricotta cheese</li>
+        <li>1 1/2 pounds (24 ounces) mozzarella cheese, grated or sliced</li>
+        <li>1/4 pound (4 ounces) freshly grated Parmesan cheese</li>
     </ol>
+
+    <h2>Create the lasagna</h2>
+    <ol>
+        <li>Put a large pot of salted water (1 Tbsp salt for every 2 quarts of water) on the stovetop on high heat. It
+            can take a while for a large pot of water to come to a boil (this will be your pasta water), so prepare the
+            sauce in the next steps while the water is heating.
+        </li>
+
+        <img src="images/StepTwo_BrownGroundBeef.jpeg" alt="Pan Of Browned ground beef">
+        <li>In a large skillet heat 2 teaspoons of olive oil on medium high heat. Add the ground beef and cook until it
+            is lightly browned on all sides.
+            <br>Remove the beef with a slotted spoon to a bowl. Drain off all but a tablespoon of fat.
+        </li>
+
+        <img src="images/StepThree_Pan of peppers.jpeg" alt="">
+        <li>Add the diced bell pepper and onions to skillet (in the photo we are using yellow bell pepper and red
+            onions).
+            <br>Cook for 4 to 5 minutes, until the onions are translucent and the peppers softened. Add the minced
+            garlic and cook half a minute more.
+            <br>Return the browned ground beef to the pan. Stir to combine, reduce the heat to low and cook for another
+            5 minutes.
+        </li>
+
+        <li>Transfer the beef mixture to a medium sized (3- to 4-quart) pot. Add the crushed tomatoes, tomato sauce, and
+            tomato paste to the pot.
+            <br>Add the parsley, oregano, and Italian seasonings, adjusting the amounts to taste. Sprinkle with garlic
+            powder and/or garlic salt, to taste.
+            <br>Sprinkle with red or white wine vinegar. Stir in sugar, a tablespoon at a time, tasting after each
+            addition, to taste. (The amount of sugar needed will vary, depending on how acidic the tomatoes are that you
+            are using.
+            <br>Add salt to taste, and note that you will later be adding Parmesan, which is salty.
+            <br>Bring the sauce to a simmer and then lower the heat to maintain a low simmer. Cook for 15 to 45 minutes,
+            stirring often. Scrape the bottom of the pot every so often so nothing sticks to the bottom and scorches.
+            <br>Remove from heat.
+        </li>
+
+        <img src="images/StepFour_MeatSuace.jpeg" alt="">
+
+        <li>By now the salted water you started heating in step one should be boiling. Add the dry lasagna noodles and
+            cook them to al dente, per package directions. (Note noodles may be cooked in advance.)
+            <br>Stir often to prevent from sticking. Make sure that water remains at a full rolling boil during the
+            entire cooking to prevent noodles from sticking.
+            <br>When ready, drain in a colander and rinse with cool water, gently separating any noodles that may be
+            sticking together.
+            <br>Spread a little olive oil on a large rimmed baking sheet, and lay out the cooked noodles on this sheet,
+            turning them over so that they get coated with a little of the olive oil. This will prevent them from
+            sticking together.
+        </li>
+
+        <img src="images/StepFive_LasagnaNoddles.jpeg" alt="">
+
+        <li>Heat the oven to 375°F</li>
+        <li>In a 9x13-inch casserole or lasagna dish, ladle a cup of sauce and spread it over the bottom of the dish.
+            Arrange one layer of lasagna noodles lengthwise (about 3 long noodles, edge may overlap, depending on your
+            pan) over the sauce. Ladle a third of the remaining sauce over the noodles.
+            <br>Sprinkle a layer of a third of the grated mozzarella on top of lasagna sauce. Add half of the ricotta
+            cheese, by placing cheese dollops every couple inches. Sprinkle half the grated parmesan cheese evenly over
+            the top of ricotta cheese.
+            <br>Apply second layer of noodles, top it with half of the remaining sauce. Add half of the remaining
+            Mozzarella, the remaining ricotta cheese, and another the remaining Parmesan.
+            <br>Finish with another layer of noodles. Spread the remaining sauce over the top layer of noodles and
+            sprinkle with the remaining Mozzarella cheese.
+        </li>
+
+        <img src="images/StepSix_PutItAllTogether1.jpeg" alt="">
+        <img src="images/StepSix_PutItAllTogether2.jpeg" alt="">
+        <img src="images/StepSix_PutItAllTogether3.jpeg" alt="">
+        <img src="images/StepSix_PutItAllTogether4.jpeg" alt="">
+        <img src="images/StepSix_PutItAllTogether5.jpeg" alt="">
+        <img src="images/StepSix_PutItAllTogether6.jpeg" alt="">
+        <li>Cover the lasagna pan with aluminum foil, tented slightly so it doesn't touch the noodles or sauce). Bake at
+            375°F for 45 minutes. Uncover in the last 10 minutes if you'd like more of a crusty top or edges.
+        </li>
+
+        <li>Allow the lasagna to cool at least 15 before serving. Leftovers will keep for about 5 days. May be reheated
+            in conventional oven or microwave. Leave aluminum tent on for storage. (Try to keep the aluminum foil from
+            touching the sauce.)
+        </li>
+
+        <img src="images/Final Image.jpeg" alt="">
+
+    </ol>
+
+    <h4>Back to <span><a href="Odin-recipse/index.html">Home Page</a></span></h4>
 </body>
 
 </html>
