Updated image links

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
     <h1>Odin Recipes</h1>
-
+    <img src="images/Final Image.jpeg" alt="">
     <ul>
         <li><a href="recipes/lasagna.html">Lasagna Recipe</a></li>
     </ul>
