--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -10,7 +10,7 @@
 
 <body>
     <h1>Lasagna Recipe</h1>
-    <img src="images/MainPicture_Lasagna.jpeg" alt="Finished Lasagna Recipe">
+    <img src="../images/MainPicture_Lasagna.jpeg" alt="Finished Lasagna Recipe">
     <h2>Ingredients List</h2>
     <ul>
         <li>2 teaspoons of olive oil</li>
@@ -45,13 +45,13 @@
             sauce in the next steps while the water is heating.
         </li>
 
-        <img src="images/StepTwo_BrownGroundBeef.jpeg" alt="Pan Of Browned ground beef">
+        <img src="../images/StepTwo_BrownGroundBeef.jpeg" alt="Pan Of Browned ground beef">
         <li>In a large skillet heat 2 teaspoons of olive oil on medium high heat. Add the ground beef and cook until it
             is lightly browned on all sides.
             <br>Remove the beef with a slotted spoon to a bowl. Drain off all but a tablespoon of fat.
         </li>
 
-        <img src="images/StepThree_Pan of peppers.jpeg" alt="">
+        <img src="../images/StepThree_Pan of peppers.jpeg" alt="">
         <li>Add the diced bell pepper and onions to skillet (in the photo we are using yellow bell pepper and red
             onions).
             <br>Cook for 4 to 5 minutes, until the onions are translucent and the peppers softened. Add the minced
@@ -73,7 +73,7 @@
             <br>Remove from heat.
         </li>
 
-        <img src="images/StepFour_MeatSuace.jpeg" alt="">
+        <img src="../images/StepFour_MeatSuace.jpeg" alt="">
 
         <li>By now the salted water you started heating in step one should be boiling. Add the dry lasagna noodles and
             cook them to al dente, per package directions. (Note noodles may be cooked in advance.)
@@ -86,7 +86,7 @@
             sticking together.
         </li>
 
-        <img src="images/StepFive_LasagnaNoddles.jpeg" alt="">
+        <img src="../images/StepFive_LasagnaNoddles.jpeg" alt="">
 
         <li>Heat the oven to 375°F</li>
         <li>In a 9x13-inch casserole or lasagna dish, ladle a cup of sauce and spread it over the bottom of the dish.
@@ -101,12 +101,12 @@
             sprinkle with the remaining Mozzarella cheese.
         </li>
 
-        <img src="images/StepSix_PutItAllTogether1.jpeg" alt="">
-        <img src="images/StepSix_PutItAllTogether2.jpeg" alt="">
-        <img src="images/StepSix_PutItAllTogether3.jpeg" alt="">
-        <img src="images/StepSix_PutItAllTogether4.jpeg" alt="">
-        <img src="images/StepSix_PutItAllTogether5.jpeg" alt="">
-        <img src="images/StepSix_PutItAllTogether6.jpeg" alt="">
+        <img src="../images/StepSix_PutItAllTogether1.jpeg" alt="">
+        <img src="../images/StepSix_PutItAllTogether2.jpeg" alt="">
+        <img src="../images/StepSix_PutItAllTogether3.jpeg" alt="">
+        <img src="../images/StepSix_PutItAllTogether4.jpeg" alt="">
+        <img src="../images/StepSix_PutItAllTogether5.jpeg" alt="">
+        <img src="../images/StepSix_PutItAllTogether6.jpeg" alt="">
         <li>Cover the lasagna pan with aluminum foil, tented slightly so it doesn't touch the noodles or sauce). Bake at
             375°F for 45 minutes. Uncover in the last 10 minutes if you'd like more of a crusty top or edges.
         </li>
@@ -120,7 +120,7 @@
 
     </ol>
 
-    <h4>Back to <span><a href="Odin-recipse/index.html">Home Page</a></span></h4>
+    <h4>Back to <span><a href="../index.html">Home Page</a></span></h4>
 </body>
 
 </html>
