--- a/index.html
+++ b/index.html
@@ -11,9 +11,12 @@
 <body>
 
     <h1>Odin Recipes</h1>
-    <img src="images/Final Image.jpeg" alt="">
+    <img src="images/MainImage.gif" alt="">
     <ul>
         <li><a href="recipes/lasagna.html">Lasagna Recipe</a></li>
+        <li><a href="recipes/FryedEggs.html">Fryed Eggs</a></li>
+        <li><a href="recipes/SloppyJoes.html">Sloppy Joes</a></li>
+        <li><a href="recipes/MacAndCheese.html">Mac and Cheese</a></li>
     </ul>
 </body>
 
