Deleted Images and added images to fryed egg

--- a/recipes/FryedEggs.html
+++ b/recipes/FryedEggs.html
@@ -7,7 +7,7 @@
     <title>Fryed Eggs</title>
 </head>
 <body>
-    <img src="images/FryedEggs_MainImage.webp" alt="Fryed Eggs in a pan">
+    <img src="../images/FryedEggs_MainImage.jpeg" alt="Fryed Eggs in a pan">
     <h1>How to Fry Eggs, Four Ways</h1>
     <h2>1. Sunny Side Up</h2>
         <p>Sunny side up eggs are eggs that are fried only on one side, leaving the yolk runny and perfectly dippable. The key is to keep the yolk runny but set the whites. Here's how:</p>
@@ -41,6 +41,6 @@
                 <li>When the whites are firm and the bottom of the yolk is set, after 2 to 3 minutes, use a large spatula to flip it, turning the egg gently, so the yolk doesn't break.</li>
                 <li>Cook for 2 to 3 minutes more until the yolk is totally firm. Remove from pan and season to taste.</li>
             </ol>
-    
+    <h4>Back to <span><a href="../index.html">Home Page</a></span></h4>
 </body>
 </html>
