--- a/recipes/MacAndCheese.html
+++ b/recipes/MacAndCheese.html
@@ -7,6 +7,37 @@
     <title>Mac And Cheese</title>
 </head>
 <body>
+
+    <img src="" alt="">
+    <h1>Simple Macaroni and Cheese
+    </h1>
+
+    <h2>Ingredients</h2>
+    <ul>
+        <li>1 (8 ounce) box elbow macaroni</li>
+        <li>¼ cup butter</li>
+        <li>¼ cup all-purpose flour</li>
+        <li>½ teaspoon salt</li>
+        <li>ground black pepper to taste</li>
+        <li>2 cups milk</li>
+        <li>2 cups shredded Cheddar cheese</li>
+    </ul>
+
+    <h2>Directions</h2>
+
+    <ol>
+        <li>Bring a large pot of lightly salted water to a boil. Cook elbow macaroni in the boiling water, stirring occasionally until cooked through but firm to the bite, 8 minutes.</li>
+
+        <li>At the same time, melt butter in a saucepan over medium heat. Add flour, salt, and pepper and stir until smooth, about 5 minutes. Pour in milk slowly, while stirring continuously. Continue to cook and stir until mixture is smooth and bubbling, about 5 minutes, making sure the milk doesn't burn.</li>
+
+        <li>Add Cheddar cheese and stir until melted, 2 to 4 minutes.</li>
+
+        <li>Drain macaroni and fold into cheese sauce until coated.</li>
+    </ol>
+
+    <img src="../images/FinalMacAndCheeseImage.webp" alt="">
+
+    <h4>Back to <span><a href="../index.html">Home Page</a></span></h4>
     
 </body>
 </html>
