--- a/recipes/SloppyJoes.html
+++ b/recipes/SloppyJoes.html
@@ -7,6 +7,35 @@
     <title>Sloppy Joes</title>
 </head>
 <body>
-    
+
+    <img src="../images/SloppyJoesMainImage.jfif" alt="">
+    <h1>Sloppy Joes Recipe</h1>
+
+    <h2>Ingredients</h2>
+    <ul>
+        <li>1 pound lean ground beef</li>
+        <li>¼ cup chopped onion</li>
+        <li>¼ cup chopped green bell pepper</li>
+        <li>¾ cup ketchup, or to taste</li>
+        <li>1 tablespoon brown sugar, or to taste</li>
+        <li>1 teaspoon yellow mustard, or to taste</li>
+        <li>½ teaspoon garlic powder</li>
+        <li>salt and ground black pepper to taste</li>
+        <li>6 hamburger buns, split</li>
+    </ul>
+
+    <h2>Directions</h2>
+
+    <ol>
+        <li>Heat a large skillet over medium heat. Cook and stir lean ground beef in the hot skillet until some of the fat starts to render, 3 to 4 minutes. Add onion and bell pepper; continue to cook until vegetables have softened and beef is cooked through, 3 to 5 more minutes.</li>
+
+        <li>Stir in ketchup, brown sugar, mustard, and garlic powder; season with salt and pepper. Reduce heat to low and simmer for 20 to 30 minutes.</li>
+
+        <li>Divide meat mixture evenly among hamburger buns.</li>
+    </ol>
+
+    <img src="../images/FinalSloppyJoeImage.webp" alt="">
+
+    <h4>Back to <span><a href="../index.html">Home Page</a></span></h4>
 </body>
 </html>
